fix: change ball task. finish jumping bahevior

--- a/HW8/ball/style.css
+++ b/HW8/ball/style.css
@@ -2,36 +2,65 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    position: relative;
     max-width: 900px;
     height: 70vh;
     margin: 0 auto;
-    border-bottom: 2px solid #000;
+    /* border-bottom: 2px solid #000; */
 }
 
-.ball{
-    width: 200px;
-    height: 200px;
+.ball {
+    position: absolute;
+    top: -20%;
+    width: 50px;
+    height: 100px;
     border-radius: 50%;
     background: rgb(55, 185, 224);
-    animation: 1s 1s jump infinite ease-in-out;
-  }    
+    animation: jump 0.6s 1s linear infinite alternate;
+}
 
- @keyframes jump{
-     0%  {
-        height: 120px;
+/* @keyframes jump {
+    0% {
+        top: -20%
     }
-     20% {
-        height: 200px;
-    }
-     50% {
-        transform: translateY(-200%); 
-        border-radius: 50%;
-    }
-     95% {
-        height: 200px;
-    }
-     100%{
-        height: 120px;
-    }
- }
 
+    10% {
+        top: -18%
+    }
+
+    20% {
+        top: -10%
+    }
+
+    30% {
+        top: -5%
+    }
+
+    40% {
+        top: 0%
+    }
+
+    50% {
+        top: 5%
+    }
+
+    60% {
+        top: 10%
+    }
+
+    70% {
+        top: 30%
+    }
+
+    80% {
+        top: 50%
+    }
+
+    90% {
+        top: 70%
+    }
+
+    100% {
+        top: 100%
+    }
+} */
