--- a/HW8/car/style.css
+++ b/HW8/car/style.css
@@ -1,94 +1,82 @@
-
 .container {
-	height: 50vh;
-	width: 100%;
-    position:relative;
+  height: 50vh;
+  width: 100%;
+  position: relative;
 }
 
 .car {
-	width: 30vw;
-	right: 0;
-	bottom: 0;
-	position: absolute;
-	animation: moove 10s linear infinite, car-rotate 1s linear infinite;
+  width: 30vw;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  animation: moove 10s linear infinite, car-rotate 1s linear infinite;
 }
 
-.car img{
-	width: 100%;
-	animation: car 1s linear infinite;
+.car img {
+  width: 100%;
+  animation: car 1s linear infinite;
 }
 
-@keyframes car{
-	0% {
-		transform: translateY(-1px);
-	}
+@keyframes car {
+  0% {
+    transform: translateY(-1px);
+  }
 
-	50% {
-		transform: translateY(1px);
-	}
+  50% {
+    transform: translateY(1px);
+  }
 
-	100% {
-		transform: translateY(-1px);
-	}
+  100% {
+    transform: translateY(-1px);
+  }
 }
 
 .car-wheel {
-	right: 0;
-	bottom: 4vw;
-	position: absolute;
-	animation: moove 10s linear infinite;
+  right: 0;
+  bottom: 4vw;
+  position: absolute;
+  animation: moove 10s linear infinite;
 }
 
-.car-wheel img{
-	width: 5vw;
-	animation: car-wheel 1s linear infinite;
+.car-wheel img {
+  width: 5vw;
+  animation: car-wheel 1s linear infinite;
 }
 
 .front-wheel {
-	right: 22vw;
-	position: absolute;
+  right: 22vw;
+  position: absolute;
 }
 
 .back-wheel {
-	right: 3vw;
-	position: absolute;
+  right: 3vw;
+  position: absolute;
 }
 
-@keyframes car-wheel{
-	100% {
-		transform: rotate(-360deg);
-	}
+@keyframes car-wheel {
+  100% {
+    transform: rotate(-360deg);
+  }
 }
 
 @keyframes moove {
-	0% {
-		right: 0;
-	}
+  0% {
+    right: 0;
+  }
 
-	25% {
-		right: 30vw;
-	}
+  25% {
+    right: 30vw;
+  }
 
-	50% {
-		right: 68vw;
+  50% {
+    right: 68vw;
+  }
 
-	}
+  75% {
+    right: 30vw;
+  }
 
-	75% {
-		right: 30vw
-	}
-
-	100% {
-		right: 0;
-	}
+  100% {
+    right: 0;
+  }
 }
-
-/* @keyframes car-rotate {
-	0% {
-		transform: rotateY(0);
-	}
-	
-	100% {
-		transform: rotateY(180deg);
-	}
-} */
